--- a/src/ui/components/lineage/sidebarTabsSwitchers/artifact.module.scss
+++ b/src/ui/components/lineage/sidebarTabsSwitchers/artifact.module.scss
@@ -7,3 +7,18 @@
     background-color: #431d93;
     transition: "all 300ms ease-in-out"
 }
+
+.siderbar_tabs{
+    // position: absolute;
+    top: 10%;
+    right: 0px;
+    /* transform: translate(-100%); */
+    width: 50vw;
+    height: 100vh;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    z-index: 100;
+    // box-shadow: 0 0px 100px rgb(0 0 0 / 0.1);
+    opacity: 1;
+    /* transition: 1s; */
+}
